[package]
name = "fellowship-project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Solana dependencies
solana-sdk = "1.18"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "3.0"

# Crypto and encoding
bs58 = "0.5"
base64 = "0.22"
# Note: ed25519-dalek is already included via solana-sdk

# Error handling
thiserror = "1.0"
anyhow = "1.0"